<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     >

    <item
        android:id="@+id/pregled"
        android:title="@string/pregled"
        myapp:showAsAction="always"
        android:icon="@drawable/ic_search"/>
    
    <item
        android:id="@+id/dnevnik_unosa"
        android:title="@string/dnevnik_unosa"
        myapp:showAsAction="always"
        android:icon="@drawable/dnevnik_unosa"
        />
    
    <item
        android:id="@+id/stoperica"
        android:title="@string/st_watch"
        myapp:showAsAction="ifRoom"
        android:icon="@drawable/stoperica"
        />
    
    <item
        android:id="@+id/aboutApp"
        android:title="@string/about"
        myapp:showAsAction="never"
        />
    
    <item
        android:id="@+id/izlaz"
        android:title="@string/izlaz"
        myapp:showAsAction="never"
        />
    
    
   
</menu>
