<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spol" />

            <RadioGroup
                android:id="@+id/odabir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/muskarac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/musko" />

                <RadioButton
                    android:id="@+id/zena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zensko" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/godine" />

            <EditText
                android:id="@+id/etGodine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:maxLength="5"
                android:gravity="center"
                android:inputType="number" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tezina" />

            <EditText
                android:id="@+id/etTezina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="5" >

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vrijeme" />

            <EditText
                android:id="@+id/etVrijeme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="5"
                android:ems="5"
                android:gravity="center"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srce" />

            <EditText
                android:id="@+id/etBpm"
                android:textSize="15sp"
                android:hint="@string/raspon"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="5"
                android:ems="5"
                android:gravity="center"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bpm" />
            
            </LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aktivnost"/>
            
            <EditText
                android:id="@+id/etAktinost"
                android:textSize="15sp"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/izracunaj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bIzracunaj" />

            <TextView
                android:id="@+id/tvRezultat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/spremi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bSave" />
    </LinearLayout>

</ScrollView>