<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/metoda1"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                android:textColor="#FFFF00"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/metoda1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/metoda2"
                android:textSize="20sp"
                android:textColor="#FFFF00"
                android:layout_width="0dip"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/metoda2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bunos"
                android:textSize="20sp"
                android:layout_width="0dip"
                android:textColor="#FFFF00"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bUnos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bPregled"
                android:textSize="20sp"
                android:layout_width="0dip"
                android:layout_marginBottom="15dp"
                android:textColor="#FFFF00"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pregled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bPregledunosa"
                android:layout_width="0dip"
                android:textColor="#FFFF00"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bPregledunesenog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/st_watch"
                android:textSize="20sp"
                android:layout_width="0dip"
                android:textColor="#FFFF00"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/st_watch" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>