<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center">

    <Chronometer
        android:layout_gravity="center"
        android:textSize="40sp"
        android:id="@+id/chronometer1"
        android:format="%s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dip"
        android:paddingTop="30dip" />
    
    <Button
        android:id="@+id/bStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />
    	
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
    	android:weightSum="10">
    	
    	<Button
        	android:id="@+id/bStop"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/stop"
        	android:layout_weight="5" />
    
    	<Button
    		android:id="@+id/bReset"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/restart"
    		android:layout_weight="5" />
    
    </LinearLayout>

</LinearLayout>
