<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/odaberi_vjezbu"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/vjezbe"
            android:entryValues="@array/mets" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/unesi_tezinu"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etTezina"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/unesi_vrijeme"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etVrijeme"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bIzracunaj" />

            <TextView
                android:id="@+id/tvRezultat"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bSave" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>